notes format change; options endpoint; front
